; ModuleID = '/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/adreno/extr_adreno_gpu.c_adreno_gpu_cleanup.c'
source_filename = "/home/carl/AnghaBench/linux/drivers/gpu/drm/msm/adreno/extr_adreno_gpu.c_adreno_gpu_cleanup.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.adreno_gpu = type { %struct.msm_gpu, i32*, %struct.TYPE_2__* }
%struct.msm_gpu = type { i32 }
%struct.TYPE_2__ = type { i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local void @adreno_gpu_cleanup(%struct.adreno_gpu* %0) #0 {
  %2 = alloca %struct.adreno_gpu*, align 8
  %3 = alloca %struct.msm_gpu*, align 8
  %4 = alloca i32, align 4
  store %struct.adreno_gpu* %0, %struct.adreno_gpu** %2, align 8
  %5 = load %struct.adreno_gpu*, %struct.adreno_gpu** %2, align 8
  %6 = getelementptr inbounds %struct.adreno_gpu, %struct.adreno_gpu* %5, i32 0, i32 0
  store %struct.msm_gpu* %6, %struct.msm_gpu** %3, align 8
  store i32 0, i32* %4, align 4
  br label %7

7:                                                ; preds = %25, %1
  %8 = load i32, i32* %4, align 4
  %9 = load %struct.adreno_gpu*, %struct.adreno_gpu** %2, align 8
  %10 = getelementptr inbounds %struct.adreno_gpu, %struct.adreno_gpu* %9, i32 0, i32 2
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call i32 @ARRAY_SIZE(i32 %13)
  %15 = icmp ult i32 %8, %14
  br i1 %15, label %16, label %28

16:                                               ; preds = %7
  %17 = load %struct.adreno_gpu*, %struct.adreno_gpu** %2, align 8
  %18 = getelementptr inbounds %struct.adreno_gpu, %struct.adreno_gpu* %17, i32 0, i32 1
  %19 = load i32*, i32** %18, align 8
  %20 = load i32, i32* %4, align 4
  %21 = zext i32 %20 to i64
  %22 = getelementptr inbounds i32, i32* %19, i64 %21
  %23 = load i32, i32* %22, align 4
  %24 = call i32 @release_firmware(i32 %23)
  br label %25

25:                                               ; preds = %16
  %26 = load i32, i32* %4, align 4
  %27 = add i32 %26, 1
  store i32 %27, i32* %4, align 4
  br label %7

28:                                               ; preds = %7
  %29 = load %struct.msm_gpu*, %struct.msm_gpu** %3, align 8
  %30 = getelementptr inbounds %struct.msm_gpu, %struct.msm_gpu* %29, i32 0, i32 0
  %31 = load i32, i32* %30, align 4
  %32 = call i32 @icc_put(i32 %31)
  %33 = load %struct.adreno_gpu*, %struct.adreno_gpu** %2, align 8
  %34 = getelementptr inbounds %struct.adreno_gpu, %struct.adreno_gpu* %33, i32 0, i32 0
  %35 = call i32 @msm_gpu_cleanup(%struct.msm_gpu* %34)
  ret void
}

declare dso_local i32 @ARRAY_SIZE(i32) #1

declare dso_local i32 @release_firmware(i32) #1

declare dso_local i32 @icc_put(i32) #1

declare dso_local i32 @msm_gpu_cleanup(%struct.msm_gpu*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
